crt: Restore ftime symbol also for UCRT builds
Fixes commit ee481ee9392c ("crt: Move ftime symbol definition from _ftime.c
to crt-aliases.def.in"). It added ftime symbol only to crt-aliases.def.in
which is not used by api-ms-win-crt-* def files for UCRT builds.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/api-ms-win-crt-time-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-time-l1-1-0.def.in
@@ -18,6 +18,8 @@ _difftime32
 _difftime64
 F32(_ftime == _ftime32)
 F64(_ftime == _ftime64)
+F32(ftime == _ftime32)
+F64(ftime == _ftime64)
 _ftime32
 _ftime32_s
 _ftime64
