crt: api-ms-win-crt-*.def.in: Fix symbols
Reapply commits d60d431d26d6 ("crt: ucrtbase.def.in: Fix ARM64 symbols")
and 52c98b1273a6 ("crt: ucrtbase.def.in: Fix symbols not available on I386
and X64") for api-ms-win-crt-*.def.in files.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
@@ -94,9 +94,9 @@ finite == _finite
 F_NON_I386(_finitef)
 _fpclass
 fpclass == _fpclass
-_fpclassf
+F_X64(_fpclassf)
 F_I386(_ftol)
-_get_FMA3_enable
+F_X64(_get_FMA3_enable)
 _hypot
 _hypotf
 _isnan
@@ -137,7 +137,7 @@ _nextafter
 F_X64(_nextafterf)
 _scalb
 F_X64(_scalbf)
-F64(_set_FMA3_enable)
+F_X64(_set_FMA3_enable)
 F_I386(_set_SSE2_enable)
 _y0
 y0 == _y0
