--- a/mingw-w64-crt/lib-common/api-ms-win-crt-private-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-private-l1-1-0.def.in
@@ -9,14 +9,14 @@ F_I386(_CxxThrowException@8)
 F_NON_I386(_CxxThrowException)
 F_I386(_EH_prolog)
 _FindAndUnlinkFrame
-_GetImageBase
-_GetThrowImageBase
+F_X64(_GetImageBase)
+F_X64(_GetThrowImageBase)
 _IsExceptionObjectToBeDestroyed
-_NLG_Dispatch2
-_NLG_Return
-_NLG_Return2
-_SetImageBase
-_SetThrowImageBase
+F_I386(_NLG_Dispatch2@4)
+F_I386(_NLG_Return@12)
+F_I386(_NLG_Return2)
+F_X64(_SetImageBase)
+F_X64(_SetThrowImageBase)
 _SetWinRTOutOfMemoryExceptionCallback
 __AdjustPointer
 __BuildCatchObject
@@ -34,8 +34,8 @@ __CxxUnregisterExceptionObject
 __DestructExceptionObject
 __FrameUnwindFilter
 __GetPlatformExceptionInfo
-__NLG_Dispatch2
-__NLG_Return2
+F_NON_I386(__NLG_Dispatch2)
+F_NON_I386(__NLG_Return2)
 __RTCastToVoid
 __RTDynamicCast
 __RTtypeid
@@ -44,8 +44,8 @@ __current_exception
 __current_exception_context
 __dcrt_get_wide_environment_from_os
 __dcrt_initial_narrow_environment DATA
-__intrinsic_abnormal_termination
-__intrinsic_setjmp
+F_I386(__intrinsic_abnormal_termination)
+F_NON_ARM64(__intrinsic_setjmp)
 F64(__intrinsic_setjmpex)
 __processing_throw
 __report_gsfailure
@@ -66,26 +66,26 @@ _get_purecall_handler
 _get_unexpected
 F_I386(_global_unwind2)
 _is_exception_typeof
-F_X64(_local_unwind)
+F64(_local_unwind)
 F_I386(_local_unwind2)
 F_I386(_local_unwind4)
 F_I386(_longjmpex)
-_o__CIacos
-_o__CIasin
-_o__CIatan
-_o__CIatan2
-_o__CIcos
-_o__CIcosh
-_o__CIexp
-_o__CIfmod
-_o__CIlog
-_o__CIlog10
-_o__CIpow
-_o__CIsin
-_o__CIsinh
-_o__CIsqrt
-_o__CItan
-_o__CItanh
+F_I386(_o__CIacos)
+F_I386(_o__CIasin)
+F_I386(_o__CIatan)
+F_I386(_o__CIatan2)
+F_I386(_o__CIcos)
+F_I386(_o__CIcosh)
+F_I386(_o__CIexp)
+F_I386(_o__CIfmod)
+F_I386(_o__CIlog)
+F_I386(_o__CIlog10)
+F_I386(_o__CIpow)
+F_I386(_o__CIsin)
+F_I386(_o__CIsinh)
+F_I386(_o__CIsqrt)
+F_I386(_o__CItan)
+F_I386(_o__CItanh)
 _o__Getdays
 _o__Getmonths
 _o__Gettnames
@@ -106,27 +106,27 @@ _o___conio_common_vcwscanf
 _o___daylight
 _o___dstbias
 _o___fpe_flt_rounds
-_o___libm_sse2_acos
-_o___libm_sse2_acosf
-_o___libm_sse2_asin
-_o___libm_sse2_asinf
-_o___libm_sse2_atan
-_o___libm_sse2_atan2
-_o___libm_sse2_atanf
-_o___libm_sse2_cos
-_o___libm_sse2_cosf
-_o___libm_sse2_exp
-_o___libm_sse2_expf
-_o___libm_sse2_log
-_o___libm_sse2_log10
-_o___libm_sse2_log10f
-_o___libm_sse2_logf
-_o___libm_sse2_pow
-_o___libm_sse2_powf
-_o___libm_sse2_sin
-_o___libm_sse2_sinf
-_o___libm_sse2_tan
-_o___libm_sse2_tanf
+F_I386(_o___libm_sse2_acos)
+F_I386(_o___libm_sse2_acosf)
+F_I386(_o___libm_sse2_asin)
+F_I386(_o___libm_sse2_asinf)
+F_I386(_o___libm_sse2_atan)
+F_I386(_o___libm_sse2_atan2)
+F_I386(_o___libm_sse2_atanf)
+F_I386(_o___libm_sse2_cos)
+F_I386(_o___libm_sse2_cosf)
+F_I386(_o___libm_sse2_exp)
+F_I386(_o___libm_sse2_expf)
+F_I386(_o___libm_sse2_log)
+F_I386(_o___libm_sse2_log10)
+F_I386(_o___libm_sse2_log10f)
+F_I386(_o___libm_sse2_logf)
+F_I386(_o___libm_sse2_pow)
+F_I386(_o___libm_sse2_powf)
+F_I386(_o___libm_sse2_sin)
+F_I386(_o___libm_sse2_sinf)
+F_I386(_o___libm_sse2_tan)
+F_I386(_o___libm_sse2_tanf)
 _o___p___argc
 _o___p___argv
 _o___p___wargv
@@ -272,7 +272,7 @@ _o__findnext64
 _o__findnext64i32
 _o__flushall
 _o__fpclass
-_o__fpclassf
+F_X64(_o__fpclassf)
 _o__fputc_nolock
 _o__fputchar
 _o__fputwc_nolock
@@ -443,17 +443,17 @@ _o__ldtest
 _o__ldunscale
 _o__lfind
 _o__lfind_s
-_o__libm_sse2_acos_precise
-_o__libm_sse2_asin_precise
-_o__libm_sse2_atan_precise
-_o__libm_sse2_cos_precise
-_o__libm_sse2_exp_precise
-_o__libm_sse2_log10_precise
-_o__libm_sse2_log_precise
-_o__libm_sse2_pow_precise
-_o__libm_sse2_sin_precise
-_o__libm_sse2_sqrt_precise
-_o__libm_sse2_tan_precise
+F_I386(_o__libm_sse2_acos_precise)
+F_I386(_o__libm_sse2_asin_precise)
+F_I386(_o__libm_sse2_atan_precise)
+F_I386(_o__libm_sse2_cos_precise)
+F_I386(_o__libm_sse2_exp_precise)
+F_I386(_o__libm_sse2_log10_precise)
+F_I386(_o__libm_sse2_log_precise)
+F_I386(_o__libm_sse2_pow_precise)
+F_I386(_o__libm_sse2_sin_precise)
+F_I386(_o__libm_sse2_sqrt_precise)
+F_I386(_o__libm_sse2_tan_precise)
 _o__loaddll
 _o__localtime32
 _o__localtime32_s
@@ -462,7 +462,7 @@ _o__localtime64_s
 _o__lock_file
 _o__locking
 _o__logb
-_o__logbf
+F_NON_I386(_o__logbf)
 _o__lsearch
 _o__lsearch_s
 _o__lseek
@@ -619,7 +619,7 @@ _o__mktime32
 _o__mktime64
 _o__msize
 _o__nextafter
-_o__nextafterf
+F_X64(_o__nextafterf)
 _o__open_osfhandle
 _o__pclose
 _o__pipe
@@ -642,7 +642,7 @@ _o__resetstkoflw
 _o__rmdir
 _o__rmtmp
 _o__scalb
-_o__scalbf
+F_X64(_o__scalbf)
 _o__searchenv
 _o__searchenv_s
 _o__set_abort_behavior
@@ -875,21 +875,21 @@ _o__y1
 _o__yn
 _o_abort
 _o_acos
-_o_acosf
+F_NON_I386(_o_acosf)
 _o_acosh
 _o_acoshf
 _o_acoshl
 _o_asctime
 _o_asctime_s
 _o_asin
-_o_asinf
+F_NON_I386(_o_asinf)
 _o_asinh
 _o_asinhf
 _o_asinhl
 _o_atan
 _o_atan2
-_o_atan2f
-_o_atanf
+F_NON_I386(_o_atan2f)
+F_NON_I386(_o_atanf)
 _o_atanh
 _o_atanhf
 _o_atanhl
@@ -904,13 +904,13 @@ _o_calloc
 _o_cbrt
 _o_cbrtf
 _o_ceil
-_o_ceilf
+F_NON_I386(_o_ceilf)
 _o_clearerr
 _o_clearerr_s
 _o_cos
-_o_cosf
+F_NON_I386(_o_cosf)
 _o_cosh
-_o_coshf
+F_NON_I386(_o_coshf)
 _o_erf
 _o_erfc
 _o_erfcf
@@ -921,7 +921,7 @@ _o_exp
 _o_exp2
 _o_exp2f
 _o_exp2l
-_o_expf
+F_NON_I386(_o_expf)
 _o_fabs
 _o_fclose
 _o_feof
@@ -933,12 +933,12 @@ _o_fgets
 _o_fgetwc
 _o_fgetws
 _o_floor
-_o_floorf
+F_NON_I386(_o_floorf)
 _o_fma
 _o_fmaf
 _o_fmal
 _o_fmod
-_o_fmodf
+F_NON_I386(_o_fmodf)
 _o_fopen
 _o_fopen_s
 _o_fputc
@@ -1005,7 +1005,7 @@ _o_llroundl
 _o_localeconv
 _o_log
 _o_log10
-_o_log10f
+F_NON_I386(_o_log10f)
 _o_log1p
 _o_log1pf
 _o_log1pl
@@ -1015,7 +1015,7 @@ _o_log2l
 _o_logb
 _o_logbf
 _o_logbl
-_o_logf
+F_NON_I386(_o_logf)
 _o_lrint
 _o_lrintf
 _o_lrintl
@@ -1035,7 +1035,7 @@ _o_mbstowcs_s
 _o_mbtowc
 _o_memset
 _o_modf
-_o_modff
+F_NON_I386(_o_modff)
 _o_nan
 _o_nanf
 _o_nanl
@@ -1085,11 +1085,11 @@ _o_set_terminate
 _o_setbuf
 _o_setvbuf
 _o_sin
-_o_sinf
+F_NON_I386(_o_sinf)
 _o_sinh
-_o_sinhf
+F_NON_I386(_o_sinhf)
 _o_sqrt
-_o_sqrtf
+F_NON_I386(_o_sqrtf)
 _o_srand
 _o_strcat_s
 _o_strcoll
@@ -1110,9 +1110,9 @@ _o_strtoul
 _o_strtoull
 _o_system
 _o_tan
-_o_tanf
+F_NON_I386(_o_tanf)
 _o_tanh
-_o_tanhf
+F_NON_I386(_o_tanhf)
 _o_terminate
 _o_tgamma
 _o_tgammaf
