headers: Import mpeg2data.idl from wine
Required for https://code.videolan.org/videolan/vlc/-/commit/e68f089d5419c7832c625f535f9ec79d62a1c624

Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -179,6 +179,8 @@ IDL_SRCS = \
   include/mfreadwrite.idl \
   include/mftransform.idl \
   include/mmdeviceapi.idl \
+  include/mpeg2data.idl \
+  include/mpeg2structs.idl \
   include/mscoree.idl \
   include/msctf.idl \
   include/msinkaut.idl \
